[tool.poetry]
name = "symplot"
version = "0.1.0"
description = "Simple math plots for SymPy and Matplotlib"
authors = ["John Lockwood <john@codesolid.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
sympy = "^1.12"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
